--- a/public/index.html
+++ b/public/index.html
@@ -1651,8 +1651,8 @@
                                 </h2>
                                 <p>Copy and paste the below SQL into a new automation after the control group data extension has filled up with contacts</p>
                                 <ul>
-                                    <li>Target Data Extension: Environment > Outbound > IF028 > PARTY_COMMUNICATION_HISTORY</li>
-                                    <li>Data Action: Append</li>
+                                    <li><b>Target Data Extension:</b> Environment > Outbound > IF028 > PARTY_COMMUNICATION_HISTORY</li>
+                                    <li><b>Data Action:</b> Append</li>
                                 </ul>
                                 <br>
                                 <p>
@@ -1689,8 +1689,8 @@
                                 </h2>
                                 <p>Copy and paste the below SQL into a new automation after the update contact data extension has filled up with contacts</p>
                                 <ul>
-                                    <li>Target Data Extension: Environment > Outbound > IF024 > PROMOTION_ASSIGNMENT</li>
-                                    <li>Data Action: Append</li>
+                                    <li><b>Target Data Extension:</b> Environment > Outbound > IF024 > PROMOTION_ASSIGNMENT</li>
+                                    <li><b>Data Action:</b> Append</li>
                                 </ul>
                                 <br>
                                 <p>
@@ -1703,9 +1703,10 @@
                                     LEFT JOIN campaignPromotionAssociation_NEW_SIT as cpa<br>
                                     ON cpa.promotion_key = <span class="promotion_key_sql"></span>
                                 </p>
+                                <br>
                                 <ul>
-                                    <li>Target Data Extension: Environment > Outbound > IF028 > PARTY_COMMUNICATION_HISTORY</li>
-                                    <li>Data Action: Append</li>
+                                    <li><b>Target Data Extension:</b> Environment > Outbound > IF028 > PARTY_COMMUNICATION_HISTORY</li>
+                                    <li><b>Data Action:</b> Append</li>
                                 </ul>
                                 <br>
                                 <p>
