--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         })();
     </script>
 </head>
-<body>
+<body class="hideshow">
     <div id="spinner" class="demo-only" style="height:0rem">
       <div class="slds-spinner_container">
         <div role="status" class="slds-spinner slds-spinner_medium slds-spinner_brand">
